<resources>
    <string name="app_name">陕坝缴费宝</string>
    <string name="about_us_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;“陕坝缴费宝”是银联旗下便民缴费平台。由内蒙古农金电子科技有限公司开发，通过行业前置平台接入银联内容与渠道管理平台，实现线上线下多渠道的便民缴费业务。
“陕坝缴费宝”是内蒙古便民缴费业务的先行者，APP缴费业务的独立提供者，涵盖了水、电、暖、有线电视、手机充值、固话宽带、游戏点卡等多项公共事业缴费项目，后期还会加入学费，物业费等缴费项目，基本全面覆盖老百姓日常缴费所需。使用专业安全的银联支付控件，支持多行卡支付的同时，保证信息和资金安全。客户只要下载该客户端并注册成功，就能够开始享受不受时间、地点限制的“轻松缴费之旅”。
    </string>
    <string name="alert_elec">一、本次缴费满100元立减10元活动仅限陕坝农商银行持金牛卡客户参加。\n二、客户需通过陕坝农商银行金牛卡进行在线支付方可享受优惠（他行银行卡不参与本次活动）。\n三、本次活动最终解释权归陕坝农商银行所有。 </string>
    <string name="input_password">输入密码</string>
    <string name="chooseGps">选择导航</string>
    <string name="action_settings">Settings</string>
    <string name="error_id_num">请输入正确的身份证号码</string>
    <string name="error_id_nm">请输入真实姓名</string>
    <string name="re_login">登陆已失效,请重新登陆</string>
    <string name="back_btn">返回</string>
    <string name="item_unfinished">尚未开通，敬请期待&#8230;</string>
    <string name="string_rmb">元</string>
    <string name="pay_mouth_num">个月</string>
    <string name="error_data">数据有误,稍后重试&#8230;</string>
    <string name="error_wifi_disconnect">网络连接失败,请稍后重试!</string>
    <string name="advice_info_str">请确认个人基本缴费信息正确后,进行缴费\n建议用金牛卡支付,免收手续费</string>
    <string name="current_newest_version">当前已经是最新版本</string>
    <string name="app_update">软件版本更新</string>
    <string name="app_update_has_new">有新版本可供更新</string>
    <string name="app_update_now">立即更新</string>
    <string name="app_update_later">以后再说</string>
    <string name="app_update_downloading">正在下载更新</string>
    <string name="login">登录</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码  :</string>
    <string name="registered">10s注册新用户</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="login_loadding">正在登录中&#8230;</string>
    <string name="login_register"><u>请点击注册</u></string>
    <string name="login_uname">请输入用户名</string>
    <string name="login_psw">请输入密码</string>
    <string name="empty_username">登陆手机号码不能为空</string>
    <string name="empty_password">登陆密码不能为空</string>
    <string name="phone_format">手机格式不正确</string>
    <string name="image_refresh">刷新</string>
    <string name="free_regist">免费注册</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="the_company_sign">忘记密码?</string>
    <string name="reset_pass_word_ok">修改密码成功!请重新登陆</string>
    <string name="reset_pass_word_false">原密码错误!</string>
    <string name="regphone">输入手机号</string>
    <string name="findpassword">找回密码</string>
    <string name="agreement">缴费宝协议</string>
    <string name="theinput">请输入正确的手机号码</string>
    <string name="inviteCodeInput">如果有邀请码,请输邀请码</string>
    <string name="findpasswordhint">请输入注册时用的手机号码</string>
    <string name="phonenumber">手机号码  :</string>
    <string name="inviteCode">邀&#160;&#160;请&#160;&#160;码  :</string>
    <string name="verificationCode">验&#160;&#160;证&#160;&#160;码  :</string>
    <string name="vernumber">请输入验证码</string>
    <string name="clickver">获取验证码</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="reg_loadding">请稍等&#8230;</string>
    <string name="reg_failure">获取验证码失败，请检查网络</string>
    <string name="seting_pass">设置密码</string>
    <string name="reseting_pass">修改密码</string>
    <string name="input_pswd">请输入6－18位登录密码</string>
    <string name="once_input_pswd">请再次输入以确认</string>
    <string name="onepice">首次输入密码不能为空</string>
    <string name="onepicetwo">再次输入密码不能为空</string>
    <string name="tishi">您输入的密码位数有误!</string>
    <string name="rules">您输入的密码不能含特殊字符!</string>
    <string name="whether">两次密码不一致</string>
    <string name="originalpassword">原密码:</string>
    <string name="newpassword">新密码:</string>
    <string name="againpassword">再输一次新密码</string>
    <string name="meassageinfo">消息列表</string>
    <string name="lookmessage">消息查看</string>
    <string name="failure">获取数据失败！</string>
    <string name="payment_details">首页</string>
    <string name="social_security_id">社保账号:</string>
    <string name="social_security_state">社保状态:</string>
    <string name="elec_jfxm">缴费项目:</string>
    <string name="social_security_name">账号名称:</string>
    <string name="elec_gdbh">供电编号:</string>
    <string name="elec_yhmc">用户名称:</string>
    <string name="elec_jyje">结余金额:</string>
    <string name="elec_wyj">违&#160;&#160;约&#160;&#160;金:</string>
    <string name="elec_yjdf">欠费金额:</string>
    <string name="elec_sjje">缴费金额:</string>
    <string name="water_sjje_input">请输入缴费金额</string>
    <string name="water_btn_submit">提交</string>
    <string name="notifation">提示 : 在注册前请用户仔细阅读本协议，一经注册视为用户接受协议内容，同意按协议履行。\n</string>
    <string name="number1">第一条 : 前言</string>
    <string name="number_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;缴费宝APP是利用互联网科技所具有的便利性，为广大用户提供自助式网上便民缴费的平台，是陕坝农商银行委托开发的线上服务业务。</string>
    <string name="number2">第二条 : 协议总则</string>
    <string name="number2_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;缴费宝服务协议（以下简称本协议）是针对缴费宝与缴费宝APP用户（以下简称“用户”）双方的。本协议旨在规范缴费宝APP注册、使用、服务等流程行为，明确陕坝农商银行与用户之间的权利和义务，对双方具有合同约束力。</string>
    <string name="number3">第三条 : 缴费宝及缴费宝APP定义</string>
    <string name="number3_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.1 缴费宝是陕坝农商银行向用户提供便民缴费的缴费软件。\n
								   &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.2 缴费宝APP是指通过陕坝农商银行手机缴费宝所提供的便民缴费平台。\n
</string>
    <string name="number4">第四条　缴费宝用户注册</string>
    <string name="number4_context">        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 4.1用户注册是指用户登录陕坝农商银行手机缴费宝APP时，填写相关信息并确认本协议的过程。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.2 确认本协议是指点击相关页面上的"确认"或表示用户同意的按钮。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.3本协议中的"通知"系指通过缴费宝APP系统消息或电话短信方式对有关信息的告知。\n
</string>
    <string name="number5">第五条 : 缴费宝提供的服务</string>
    <string name="number5_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 用户可通过手机登录缴费宝APP实现水费、电费、暖气费、手机流量、固话宽带充值，有限电视缴费以及社保查询服务。上述服务内容在一定期间内逐步开通。</string>
    <string name="number6">第六条 : 用户的权利和义务</string>
    <string name="number6_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 6.1自行配备包括手机、调制解调器或其他必备上网装置；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.2自行负担个人上网所支付的与此服务有关的电话费用、网络费用； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.3用户有权利拥有自己在缴费宝的用户名及交易密码，并有权利使用自己的用户名及密码随时登录缴费宝交易平台。用户不得以任何形式擅自转让或授权他人使用自己的缴费宝用户名；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.4用户有权根据本协议的规定以及缴费宝网上发布的相关规则利用缴费宝网上交易平台查询账单以及有权享受缴费宝提供的其他的有关信息服务； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.5用户使用缴费宝网上交易平台时如遇到问题，可以向缴费宝相关部门进行咨询要求解答； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.6用户有义务在注册时提供自己的真实资料，并保证诸如电子邮件地址、联系电话、联系地址、邮政编码等内容的有效性及安全性。同时，用户也有义务在相关资料实际变更时及时更新有关注册资料。用户保证不以他人资料在缴费宝进行注册或认证； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.7用户保证不利用技术手段及其他手段破坏及扰乱缴费宝网上交易平台程序的正常运行； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.8用户在登录缴费宝APP后，只能使用本人的银行卡或银行账户进行缴费操作。因使用或盗用他人银行卡及银行卡账户而完成的缴费交易所产生的任何责任由客户自行承担；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.9用户在缴费过程中，应确保银行卡或银行账户之真实、有效。若因银行卡或银行账户被取消、过期或账户余额不足而造成缴纳失败所产生的损失及后果，由用户负责；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.10用户应学习和掌握使用手机及网络的基本知识，特别是网络安全防范的基本知识，防止自己的用户名、密码、注册信息、信用卡账户密码等信息因自己的疏忽大意或操作失误而被他人获取； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.11用户承诺自己在使用缴费宝APP时实施的所有行为遵守国家法律、法规和缴费宝的相关规定以及各种社会公共利益或公共道德。对于任何法律后果的发生，用户将以自己的名义独立承担所有相应的法律责任。</string>
    <string name="number7">第七条  : 缴费宝的权利和义务</string>
    <string name="number7_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7.1缴费宝有义务在技术上确保整个网络交易平台的正常运行，保证用户网上交易活动的顺利； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7.2缴费宝对交易的接入系统的安全、有效、实时性负责。但不承担因通讯故障等非缴费宝主观因素所引起交易中断、交易错误引起的交易纠纷； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7.3缴费宝有义务建立健全公司内部规章制度，保证用户资料的安全； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7.4对用户在注册使用缴费宝APP交易平台中所遇到的与交易或注册有关的问题及反映的情况，缴费宝将视具体情况作出回复； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7.5缴费宝有权根据具体情况增加、减少或撤消APP业务种类，也有权拒绝或取消不符合要求的用户的APP交易资格，而无须预先通知客户； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7.6缴费宝对客户在注册中提供的相关资信资料及在交易中产生的相关资料负有保密义务，并采取措施防止泄露，但有权利用这些资料进行有关联系，沟通之用，或者根据法律规定向有权查询的法定机构，或为完成交易指令的需要向第三方提供。为向用户提供优质服务，缴费宝有权在与第三方合作商签订保密条款的基础上，允许第三方合作商直接向用户提供增值服务。同时缴费宝有权为统计分析、内部管理之目的使用上述资料； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;7.7缴费宝有权对用户的注册资料及交易行为进行查阅，发现注册资料或交易行为中存在问题，或可能会导致不良后果的，有权向用户发出询问，要求用户进一步提供必要的信息或直接对该物品、该用户及相关的交易作出相应的处理。 </string>
    <string name="number8">第八条 : 服务中断和终止</string>
    <string name="number8_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;8.1在协议有效期内，除非本协议有特别规定外，缴费宝不得擅自中断或终止对用户提供本协议规定的服务；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;8.2用户向缴费宝提出注销缴费宝注册用户身份，经缴费宝审核同意，由缴费宝注销注册用户，用户即解除与缴费宝的服务协议关系。但注销用户后，缴费宝仍保留下列权利及义务：\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;a.用户注销后，缴费宝有权保留和合理使用用户的注册资料及以前的交易行为记录；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;b.用户注销后，如用户在注销前在缴费宝交易平台上存在违法行为或违反本协议的行为，缴费宝仍可行使追究的权利。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;8.3在下列情况下，缴费宝可以中断对用户的服务：\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;a. 不可抗力；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;b. 为维护、检修、升级系统的需要以及相关第三方为维护、检修、升级系统所使用的主机、电力设备、公共网络等相关配套设施需要；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;c. 用户存在违反法律法规及本协议内容的行为，经缴费宝通知后在规定期限内不予更正的；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;d. 司法机关或政府行政机关依照法定程序要求缴费宝中断对用户服务的；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;e. 为公共利益的需要必须中断对用户服务的；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;f. 其他必须中断服务的情况。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;8.4在下列情况下，缴费宝可以通过注销用户的方式单方面终止对用户的服务：\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;a.用户因违反本协议相关规定而被缴费宝中断服务，缴费宝将在中断服务时通知用户，如用户在合理的期限内没有对此通知内容提出合理异议的，缴费宝将中断对该用户的服务。但用户在恢复服务后又发生违反法律法规及本协议内容的行为，缴费宝可以单方面终止与该用户的服务协议； \n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;b.缴费宝发现用户注册资料中主要内容是虚假的，缴费宝可以终止与该用户的服务协议；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;c.司法机关或行政机关依照法定程序要求缴费宝终止对用户服务的；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;d.为公共利益的需要必须终止对用户的服务；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;e.本协议终止或更新时，用户未确认新的服务协议的；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;f.其它缴费宝认为用户违反法律法规规定和本协议的情况。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;8.5.恢复服务\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;a.根据8.3款内容中断服务的，除8.3款C项外，自本协议8.3款规定的情形消失之日起恢复服务；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;b.曾经被终止服务的用户再一次注册为缴费宝用户，缴费宝有权单方面决定通过注销用户等方式拒绝提供服务。</string>
    <string name="number9">第九条 :协议修改</string>
    <string name="number9_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;9.1缴费宝将从改进服务出发有权修改本协议的有关条款，一旦本协议的内容发生变动，缴费宝将会通过适当方式向用户提示修改内容；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;9.2如果不同意缴费宝对本协议相关条款所做的修改，用户有权停止使用缴费宝提供的服务。如果用户继续使用缴费宝提供的服务，则视为其接受缴费宝对本协议相关条款的修改。\n</string>
    <string name="number10">第十条 : 争议解决及法律适用</string>
    <string name="number10_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;10.1本协议任何一方违反本协议规定的内容，给另一方造成损害的，应当承担违约责任，赔偿另一方因此而造成的损失，包括但不限于财产损失、利息损失、因追索或诉讼而支出的诉讼费、合理的通讯费、交通费、住宿费、律师费等；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;10.2协议一方违反协议规定内容给另一方造成损害的，受损害一方应当采取合理措施避免损失扩大的，因防止损失扩大而支出的合理费用，由违约方承担。一方没有采取合理措施避免损失扩大的，对损失扩大部分违约方不承担赔偿责任；\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;10.3 本协议由陕坝农商银行发布并负责解释。</string>
</resources>