<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/fragment_bg"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:text="@string/phonenumber" />

        <EditText
            android:id="@+id/edit_phone"
            style="@style/login_edit_text"
            android:layout_width="wrap_content"
            android:digits="0123456789"
            android:hint="@string/findpasswordhint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            android:maxLength="11"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:text="@string/verificationCode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/code_number"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:digits="0123456789"
                android:background="@null"
                android:hint="@string/vernumber"
                android:textSize="@dimen/text_size_16"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="10dp"
                />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                />

            <TextView
                android:id="@+id/obtain_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_size_14"
                android:hint="@string/clickver" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        >
        <Button
            android:id="@+id/btn_findPW"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/logback_btn_style"
            android:clickable="true"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>